# gCore

./: CMakeLists.txt  CmdParser.hpp  Header.h  KPCCaseStudy.cpp  KPCCaseStudy.h  KPCEffTest.cpp  KPCEffTest.h  KPCEvalTest.cpp  KPCEvalTest.h  KPTreeUtils.cpp  KPTreeUtils.h  KPVecGenerator.cpp  KPVecGenerator.h  Params.h  README.md  config.h  config.h.in  main.cpp
Core/: CoreDec.cpp  CoreDec.h  CoreIndex.h  ExtendedDCC.cpp  ExtendedDCC.h  Frac2IntPri.cpp  Frac2IntPri.h  KPCore.cpp  KPCore.h  KPTree.cpp  KPTree.h  KPTreeBuilder.cpp  KPTreeBuilder.h  PTree.cpp  PTree.h  PTreeBuilder.cpp  PTreeBuilder.h  RCD.cpp  RCD.h
Graphs/: BipartiteGraph.cpp  BipartiteGraph.h  Graph.cpp  Graph.h  MultilayerGraph.cpp  MultilayerGraph.h  UndirectedGraph.cpp  UndirectedGraph.h
Structures/: DataBuf.h  IntLinearHeap.cpp  IntLinearHeap.h
Utils/: ArrayUtils.h  CollectionUtils.h  FileUtils.h  FracUtils.h  MemoryUtils.h  StringUtils.h  Timer.h  Viz.h
dataset/dblp/: author-term.txt  author_name.txt  authors.txt  mlg.conf  terms.txt
dataset/twitter/: hashtag-mention.txt  hashtag_labels.txt  hashtags.txt  keyword-hashtag.txt  keyword-mention.txt  keyword_labels.txt  mention_labels.txt  mentions.txt  mlg.conf
memtrack/: CMakeLists.txt  memtrack.cpp  memtrack.h
